# Gadget_Boiler

./: CMakeLists.txt  README.md  gadget_partitions.csv
main/: CMakeLists.txt  Kconfig.projbuild  gadget_main.c
main/includes/: gadget_ap.h  gadget_central.h  gadget_comms.h  gadget_gpio.h  gadget_includes.h  gadget_log.h  gadget_sta.h
main/src/: gadget_ap.c  gadget_central.c  gadget_comms.c  gadget_gpio.c  gadget_log.c  gadget_sta.c
